--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <div class="container">
       <div class="header">
         <h1 class="text-center">Bài tập Mảng</h1>
-
         <div class="mb-3">
           <label for="" class="form-label">Nhập Số Nguyên</label>
           <input
@@ -34,17 +33,13 @@
             placeholder="nhập số n"
           />
         </div>
-
-        <button type="submit" class="btn btn-primary" id="themSo">
-          Thêm số
-        </button>
+        <button class="btn btn-primary" id="themSo">Thêm số</button>
         <div id="ketQua" class="alert-success alert my-4"></div>
       </div>
       <div class="accordion" id="accordionExample">
         <div class="accordion-item Baitap1">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -61,9 +56,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button type="button" class="btn btn-primary" id="tinhTong">
-                Tính Tổng
-              </button>
+              <button class="btn btn-primary" id="tinhTong">Tính Tổng</button>
               <div id="ketQua1" class="alert-success alert my-3"></div>
             </div>
           </div>
@@ -71,7 +64,6 @@
         <div class="accordion-item Baitap2">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -88,9 +80,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button type="button" class="btn btn-primary" id="demSo">
-                Đếm Số
-              </button>
+              <button class="btn btn-primary" id="demSo">Đếm Số</button>
               <div id="ketQua2" class="alert-success alert my-3"></div>
             </div>
           </div>
@@ -98,7 +88,6 @@
         <div class="accordion-item Baitap3">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -115,7 +104,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button type="button" class="btn btn-primary" id="timSoNhoNhat">
+              <button class="btn btn-primary" id="timSoNhoNhat">
                 Tìm số nhỏ nhất
               </button>
               <div id="ketQua3" class="alert-success alert my-3"></div>
@@ -125,7 +114,6 @@
         <div class="accordion-item Baitap4">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -142,11 +130,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button
-                type="button"
-                class="btn btn-primary"
-                id="timSoDuongNhoNhat"
-              >
+              <button class="btn btn-primary" id="timSoDuongNhoNhat">
                 Tìm số dương nhỏ nhất
               </button>
               <div id="ketQua4" class="alert-success alert my-3"></div>
@@ -156,7 +140,6 @@
         <div class="accordion-item Baitap5">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -173,7 +156,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button type="button" class="btn btn-primary" id="timSoChan">
+              <button class="btn btn-primary" id="timSoChan">
                 Tìm số chẵn
               </button>
               <div id="ketQua5" class="alert-success alert my-3"></div>
@@ -183,7 +166,6 @@
         <div class="accordion-item Baitap6">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -222,9 +204,7 @@
                   placeholder="Nhập số vị trí 2"
                 />
               </div>
-              <button type="button" class="btn btn-primary" id="doiCho">
-                Đổi chỗ
-              </button>
+              <button class="btn btn-primary" id="doiCho">Đổi chỗ</button>
               <div id="ketQua6" class="alert-success alert my-3"></div>
             </div>
           </div>
@@ -232,7 +212,6 @@
         <div class="accordion-item Baitap7">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -249,9 +228,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button type="button" class="btn btn-primary" id="sapXep">
-                Sắp xếp
-              </button>
+              <button class="btn btn-primary" id="sapXep">Sắp xếp</button>
               <div id="ketQua7" class="alert-success alert my-3"></div>
             </div>
           </div>
@@ -259,7 +236,6 @@
         <div class="accordion-item Baitap8">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -276,7 +252,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button type="button" class="btn btn-primary" id="timSoNguyenTo">
+              <button class="btn btn-primary" id="timSoNguyenTo">
                 Tìm số nguyên tố
               </button>
               <div id="ketQua8" class="alert-success alert my-3"></div>
@@ -286,7 +262,6 @@
         <div class="accordion-item Baitap9">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -315,11 +290,9 @@
                 />
               </div>
 
-              <button type="button" class="btn btn-primary" id="themSoThuc">
-                Thêm Số
-              </button>
+              <button class="btn btn-primary" id="themSoThuc">Thêm Số</button>
               <div id="soThuc" class="alert-success alert my-3"></div>
-              <button type="button" class="btn btn-primary" id="demSoNguyen">
+              <button class="btn btn-primary" id="demSoNguyen">
                 Đếm số nguyên
               </button>
 
@@ -330,7 +303,6 @@
         <div class="accordion-item Baitap10">
           <h2 class="accordion-header">
             <button
-              type="button"
               class="accordion-button collapsed"
               type="button"
               data-bs-toggle="collapse"
@@ -347,9 +319,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <button type="button" class="btn btn-primary" id="soSanh">
-                So sánh
-              </button>
+              <button class="btn btn-primary" id="soSanh">So sánh</button>
               <div id="ketQua10" class="alert-success alert my-3"></div>
             </div>
           </div>
